--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutinesCore"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutinesAndroid"
 
     // android
     implementation "com.android.support:appcompat-v7:$versions.support"
@@ -96,7 +98,8 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$versions.retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$versions.retrofit"
     implementation "com.squareup.retrofit2:converter-simplexml:$versions.retrofit"
-    implementation 'com.squareup.moshi:moshi-kotlin:1.6.0'
+    implementation "com.squareup.moshi:moshi-kotlin:$versions.moshi"
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:$versions.retroCoroutines"
 
     // room
     implementation "android.arch.persistence.room:runtime:$versions.room"
