--- a/versions.gradle
+++ b/versions.gradle
@@ -25,6 +25,10 @@ ext.versions = [
         'retrofit'          : '2.4.0',
         'room'              : '1.1.1',
         'support'           : '28.0.0',
+        'moshi'             : '1.6.0',
+        'retroCoroutines'   : '1.0.0',
+        'coroutinesCore'    : '0.22.5',
+        'coroutinesAndroid' : '0.19.3',
 
 
         ////////////////////////////////////////////////////////////////////////////////////////////
