--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,25 +6,38 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+            android:name=".StudentCalendarApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:name=".StudentCalendarApp"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            tools:ignore="GoogleAppIndexingWarning"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            tools:ignore="GoogleAppIndexingWarning">
         <activity
                 android:name=".ui.StudentCalendarActivity"
-                android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar"
                 android:configChanges="keyboardHidden|orientation|screenSize"
-                android:screenOrientation="sensorPortrait">
+                android:label="@string/app_name"
+                android:screenOrientation="sensorPortrait"
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-    </application>
 
+        <receiver android:name=".widget.StudentCalendarAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+
+            <meta-data
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/student_calendar_app_widget_info"/>
+        </receiver>
+
+        <service android:name=".widget.StudentCalendarAppWidget$UpdateService" />
+
+    </application>
 </manifest>
