--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,5 +39,9 @@
 
         <service android:name=".widget.StudentCalendarAppWidget$UpdateService" />
 
+        <service android:name=".widget.StudentCalendarWidgetService"
+                 android:permission="android.permission.BIND_REMOTEVIEWS"
+                 android:exported="false" />
+
     </application>
 </manifest>
