--- a/versions.gradle
+++ b/versions.gradle
@@ -29,6 +29,7 @@ ext.versions = [
         'retroCoroutines'   : '1.0.0',
         'coroutinesCore'    : '0.22.5',
         'coroutinesAndroid' : '0.19.3',
+        'gson'              : '2.8.2',
 
 
         ////////////////////////////////////////////////////////////////////////////////////////////
