--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         </activity>
 
         <provider android:name=".domain.local.StudentCalendarProvider"
-                  android:authorities="com.blueamber.studentcalendar.provider"/>
+                  android:authorities="com.blueamber.studentcalendar.provider"
+                  android:exported="true"/>
 
         <receiver android:name=".widget.StudentCalendarAppWidget">
             <intent-filter>
@@ -40,11 +41,11 @@
                     android:resource="@xml/student_calendar_app_widget_info"/>
         </receiver>
 
-        <service android:name=".widget.StudentCalendarAppWidget$UpdateService" />
+        <service android:name=".widget.StudentCalendarAppWidget$UpdateService"/>
 
         <service android:name=".widget.StudentCalendarWidgetService"
                  android:permission="android.permission.BIND_REMOTEVIEWS"
-                 android:exported="false" />
+                 android:exported="false"/>
 
     </application>
 </manifest>
