--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation('androidx.browser:browser:1.0.0') {
         exclude group: 'com.android.support'
     }
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.google.android.material:material:1.1.0-alpha01'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
