--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion versions.compileSdk
+    compileSdkVersion 28
     buildToolsVersion '28.0.3'
 
     defaultConfig {
@@ -21,7 +21,7 @@ android {
         configRelease {
             keyAlias 'StudCal'
             keyPassword 'PaStudCal33'
-            storeFile file('E:/workspace/android_project/keystores/student_calendar_keystore.jks')
+//            storeFile file('E:/workspace/android_project/keystores/student_calendar_keystore.jks')
             storePassword 'SudeFt5114'
         }
     }
@@ -66,12 +66,12 @@ dependencies {
     // android
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation('androidx.browser:browser:1.0.0') {
         exclude group: 'com.android.support'
     }
     implementation 'com.android.support:design:28.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha01'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
     // dagger
@@ -105,14 +105,14 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:$versions.retroCoroutines"
 
     // room
-    implementation 'androidx.room:room-runtime:2.1.0-alpha02'
-    kapt 'androidx.room:room-compiler:2.1.0-alpha02'
+    implementation 'androidx.room:room-runtime:2.2.0-beta01'
+    kapt 'androidx.room:room-compiler:2.2.0-beta01'
 
     // GSON
     implementation "com.google.code.gson:gson:$versions.gson"
 
     // tests
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
